Sidebar alignment fixed

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html {
   height: 100vh;
 }
 body {
-  height: 95vh;
+  height: 100%;
   display: grid;
   grid-template-columns: 1fr 4fr;
   grid-template-rows: 1fr 4fr;
@@ -16,9 +16,11 @@ body {
   background-color: #1892d5;
   grid-row: 1/3;
   color: white;
-  display: grid;
-  grid-template-rows: 1fr 6fr 1fr;
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
 }
+
 .sidebar a {
   text-decoration: none;
   color: white;
@@ -31,7 +33,8 @@ body {
   gap: 10px;
 }
 .logo {
-  align-self: center;
+  margin-top: 10px;
+  font-size: x-large;
 }
 
 .sidebar a:hover {
